--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/2.character-data-type-of-oracle-mode/4.nvarchar2-data-type-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/2.character-data-type-of-oracle-mode/4.nvarchar2-data-type-of-oracle-mode.md
@@ -12,7 +12,7 @@ NVARCHAR2(size)
 
 |  参数  |                                                              说明                                                              |
 |------|------------------------------------------------------------------------------------------------------------------------------|
-| size | 表示列的长度，可变长度。 您必须为 `NVARCHAR2` 指定大小，对于 AL16UTF16 编码，字节数最大为两倍，对于 UTF8 编码，字节数最大为三倍。字节数大小由国家字符集定义，上限为 32767 个字节。 |
+| size | 表示列的长度，可变长度。`size` 是字符数量，`size` 个字符的总大小不能超过 32767 字节。您必须为 `NVARCHAR2` 指定大小，对于 AL16UTF16 编码，字节数最大为两倍，对于 UTF8 编码，字节数最大为三倍。字节数大小由国家字符集定义，上限为 32767 个字节。 |
 
 ## 使用说明
 
