--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/4.hints-related-to-parallel-execution-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/6.annotation-of-oracle-mode/4.hint-of-oracle-mode/2.hint-list-of-oracle-mode/4.hints-related-to-parallel-execution-of-oracle-mode.md
@@ -1,6 +1,6 @@
 # 与并行执行相关的 Hint
 
-与并行执行相关的 Hint 包括 PARALLEL Hint、NO_PARALLEL Hint、USE_PX Hint、NO_USE_PX Hint 和 PQ_DISTRIBUTE Hint。
+与并行执行相关的 Hint 包括 PARALLEL Hint、NO_PARALLEL Hint、USE_PX Hint 和 PQ_DISTRIBUTE Hint。
 
 ## PARALLEL Hint
 
