--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md
@@ -8,9 +8,8 @@
 
 ```sql
 alter_table_stmt:
-      ALTER TABLE table_name
-      alter_table_action_list;
-    | RENAME TABLE rename_table_action_list;
+      ALTER TABLE table_name  alter_table_action_list;
+    
 
 alter_table_action_list:
     alter_table_action [, alter_table_action ...]
@@ -38,6 +37,7 @@ alter_table_action:
     | MODIFY CONSTRAINT constraint_name { ENABLE | DISABLE }
     | MODIFY PRIMARY KEY (column_name_list)
     | RENAME [TO] table_name
+    | RENAME COLUMN old_col_name TO new_col_name
     | REORGANIZE PARTITION name_list INTO partition_range_or_list
     | SET TABLEGROUP tablegroup_name
     | [SET] table_option_list
@@ -90,7 +90,7 @@ table_option_list:
     table_option [ table_option ...]
 
 table_option:
-      table_tablegroup
+      table_group
     | block_size
     | compression
     | AUTO_INCREMENT [=] INT_VALUE
@@ -241,6 +241,20 @@ partition_count | subpartition_count:
   +-------+----------+------+-----+---------+-------+
   1 row in set
   ```
+
+* 修改表 tbl1 中列 col1 的名称为 col2。
+
+```shell
+  obclient> ALTER TABLE tbl1 RENAME COLUMN col1 TO col2;
+  Query OK, 0 rows affected
+
+  obclient> DESCRIBE tbl1;
+  +-------+-------------+------+-----+---------+-------+
+  | FIELD | TYPE        | NULL | KEY | DEFAULT | EXTRA |
+  +-------+-------------+------+-----+---------+-------+
+  | COL2  | VARCHAR2(10) | YES  | NULL | NULL    | NULL  |
+  +-------+-------------+------+-----+---------+-------+
+  1 row in set 
 
 * 增加和删除列。
 
