--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/23.create-synonym-of-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/23.create-synonym-of-oracle-mode.md
@@ -80,7 +80,7 @@ obclient> CREATE OR REPLACE SYNONYM syn1 FOR tbl1;
 ERROR-00600: internal error code, arguments: -5036, Access denied; you need (at least one of) the CREATE SYNONYM privilege(s) for this operation
 
 /* 赋予用户 synonym_user CREATE SYNONYM 权限*/
-obclient> GRANT CREATE SYNONYM ON *.* TO synonym_user;
+obclient> GRANT CREATE SYNONYM TO synonym_user;
 Query OK, 0 rows affected
 
 obclient> CREATE OR REPLACE SYNONYM syn1 FOR tbl1;
