--- a/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/5.pl-static-sql-oracle/4.autonomous-transactions-oracle/2.control-autonomous-transactions-oracle.md
+++ b/zh-CN/7.reference/4.development-reference/3.pl-reference/3.pl-oracle/5.pl-static-sql-oracle/4.autonomous-transactions-oracle/2.control-autonomous-transactions-oracle.md
@@ -39,14 +39,14 @@
 
 `COMMIT` 和 `ROLLBACK` 可以结束活动的自治事务，但不退出自主例程。当一个事务结束时，下一个 SQL 语句开始另一个事务。如果一个自治例程发出多个 `COMMIT` 语句，则可以包含多个自治事务。
 
-保存点 
+Savepoint 
 ------------------------
 
-保存点只对定义它的事务有效。主事务中定义的保存点与其自治事务中定义的保存点无关。实际上，主事务和自治事务可以使用相同的保存点名称。
+Savepoint 只对定义它的事务有效。主事务中定义的 Savepoint 与其自治事务中定义的 Savepoint 无关。实际上，主事务和自治事务可以使用相同的 Savepoint 名称。
 
-您只能回滚到当前事务中标记的保存点。在自治事务中，无法回滚到主事务中标记的保存点。为此，必须通过退出自治例程来恢复主事务。
+您只能回滚到当前事务中标记的 Savepoint。在自治事务中，无法回滚到主事务中标记的 Savepoint。为此，必须通过退出自治例程来恢复主事务。
 
-在主事务中时，回滚到在启动自治事务之前标记的保存点不会回滚该自治事务。请记住，自治事务完全独立于主事务。
+在主事务中时，回滚到在启动自治事务之前标记的 Savepoint 不会回滚该自治事务。请记住，自治事务完全独立于主事务。
 
 避免自主事务中的错误 
 -------------------------------
