--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/28.create-user-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/28.create-user-of-mysql-mode.md
@@ -33,7 +33,7 @@ tls_option:
 |------------------------------------------|--------------------------------------------------------|
 | IF NOT EXISTS                            | 如果要创建的用户名已存在，并且没有指定 `IF NOT EXISTS`，则会报错。              |
 | user_name                                | 用户名，新建用户后，`mysql.user` 表会新增一行该用户的表项。如果同名用户已经存在，则报错。    |
-| IDENTIFIED BY                            | 使用可选的 `IDENTIFIED BY` 子句，可以为账户给定一个密码。                  |
+| IDENTIFIED BY                            | 使用可选的 `IDENTIFIED BY` 子句，可以为账户给定一个密码。如果密码包含特殊字符(~!@#%^&*_-+=`|(){}[]:;',.?/)，则需要使用引号包含。                  |
 | user_name \[, user_name ...\]            | 同时创建多个用户时，以逗号 (,) 隔开。                                  |
 | REQUIRE                                  | 指定用户使用的加密协议为 `NONE`、`SSL`、 `X509` 和 `tls_option` 中的一种。 |
 | user IDENTIFIED BY  'authstring'         | 此处密码为明文，存入 `mysql.user` 表后，服务器端会变为密文存储下来。              |
