--- a/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/7.user-interface-and-query-language/2.PL/1.pl-concepts/2.pl-of-mysql-mode/4.trigger-of-mysql-mode.md
@@ -24,7 +24,7 @@ OceanBase 数据库 MySQL 模式当前主要支持以下类型的触发器：
 
 * 当前触发器关联的表的权限，包括 `SELECT`、`INSERT`、`UPDATE`、`DELETE` 等权限。
 
-* 触发器权限，即 `CREATE TRIGGER` 权限。
+* 触发器权限，即 `CREATE` 权限。
 
 * 触发器激活后要执行的语句的权限。
 
