--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/2.environment-and-configuration-checks.md
@@ -185,7 +185,7 @@ ifconfig
 
 ### 前提条件
 
-设置无密码 SSH 登录前，确保您拥有目标机器的 `root` 用户权限。
+设置无密码 SSH 登录前，确保您拥有目标机器的 root 用户权限。
 
 ### 操作步骤
 
@@ -305,7 +305,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
    如果您已经有了 NTP 服务端服务器，则可跳过此步骤。本文档使用目标机器 `10.244.0.114` 作为 NTP 服务端服务器。
    1. 编辑配置文件。
 
-      以 `root` 用户登录 NTP 服务端服务器，运行以下命令编辑配置文件：
+      以 root 用户登录 NTP 服务端服务器，运行以下命令编辑配置文件：
 
       ```bash
       vi /etc/ntp.conf
@@ -344,7 +344,7 @@ OceanBase 集群中的服务器时间必须保持一致，否则会导致 OceanB
      <p>NTP 服务端服务启动后，您需要等待 5 分钟再开启 NTP 客户端服务。否则系统会提示 &quot;no server suitable for synchronization found&quot;。</p>
    </main>
 
-   1. 使用 `root` 用户登录 OceanBase 数据库。
+   1. 使用 root 用户登录 OceanBase 数据库。
 
    2. 运行以下命令停止 NTP 服务：
 
