--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/5.kill-server-session.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/5.logical-connection/5.kill-server-session.md
@@ -12,7 +12,7 @@
 
 * `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。
 
-* 与 `KILL connection_id` 的作用一致。有关 `KILL` 语句的详细介绍，请参见 [KILL（MySQL 模式）](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/38.kill-of-mysql-mode.md) 或 [KILL（Oracle 模式）](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/8.kill-of-oracle-mode.md)。
+* 与 `KILL connection_id` 的作用一致。有关 `KILL` 语句的详细介绍，请参见 [KILL（MySQL 模式）](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/58.kill-of-mysql-mode.md) 或 [KILL（Oracle 模式）](../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/3.dcl-of-oracle-mode/18.kill-of-oracle-mode.md)。
 
 您还可以通过 `KILL PROXYSESSION (cs_id | connection_id) ss_id` 语句来终止指定 Client Session 上的 Server Session。
 
