--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/4.rename-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.manage-tenants/4.rename-a-tenant.md
@@ -4,7 +4,7 @@
 
 当前，OceanBase 数据库仅支持修改普通租户的名称。
 
-## 重命名租户
+## 操作步骤
 
 `sys` 租户修改普通租户名称的 SQL 语句如下：
 
@@ -22,6 +22,6 @@ obclient> ALTER TENANT old_tenant_name RENAME GLOBAL_NAME TO new_tenant_name;
    obclient> ALTER TENANT tenant1 RENAME GLOBAL_NAME TO tenant2;
    ```
 
-## 更多信息
+## 相关文档
 
-更多 `ALTER TENANT` 语句的信息，请参见 [ALTER TENANT](../../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md)。
+更多 `ALTER TENANT` 语句的信息，请参见 [ALTER TENANT](../../../../4.development-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md)。
