--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/2.create-a-dml-trigger-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/2.create-a-dml-trigger-of-oracle-mode.md
@@ -46,10 +46,10 @@ END;
 | `WHEN `           | 说明触发约束条件。                               | Condition 为一个逻辑表达式时，其中必须包含相关名称，而不能包含查询语句，也不能调用 PL 函数。`WHEN` 子句指定的触发约束条件只能用在 `BEFORE` 和 `AFTER` 行触发器中。 |
 | `FOLLOWS` 和 `PRECEDES` | 用于定义触发器顺序。                         | OceanBase 数据库当前版本支持为具有相同触发事件和动作时间的同一个表定义多个触发器，默认情况下，具有相同触发事件和动作时间的触发器其触发顺序不确定。如果希望指定触发器顺序，则可以使用 `FOLLOWS` 来指定新触发器在现有触发器之后激活，暂不支持使用 `PRECEDES` 指定新触发器在现有触发器之前激活，仅语法上支持 `PRECEDES`。|
 
-
->**注意**
->
->当一个基表被修改（`INSERT`、`UPDATE` 或 `DELETE`）时要执行存储过程，执行触发器时根据其所依附的基表改动而自动触发，因此与应用程序无关，使用触发器可以保证数据的一致性和完整性。
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>当一个基表被修改（<code>INSERT</code>、<code>UPDATE</code> 或 </code>DELETE</code>）时要执行存储过程，执行触发器时根据其所依附的基表改动而自动触发，因此与应用程序无关，使用触发器可以保证数据的一致性和完整性。</p>
+</main>
 
 ### 行级触发器的使用限制
 
