--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/2.resource-isolation-of-oracle-mode/2.resource-isolation-at-user-level-of-oracle-mode.md
@@ -4,9 +4,9 @@
 
 ## 前提条件
 
-* 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [概述](../1.resource-isolation-overview.md)。
+* 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [资源隔离概述](../1.resource-isolation-overview.md)。
 
-* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作可参见 [配置 cgroups](1.config-cgroups-for-oracle-mode.md)。
+* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作可参见 [配置 cgroups](1.config-cgroups-of-oracle-mode.md)。
 
   如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroups。
 
@@ -14,7 +14,7 @@
 
 ## 背景信息
 
-  用户级的资源隔离又分为用户级 user 资源隔离和用户级 function 资源隔离两种。有关两种资源隔离的更详细说明请参见 [资源隔离概述](../1.overview.md)。
+用户级的资源隔离又分为用户级 user 资源隔离和用户级 function 资源隔离两种。有关两种资源隔离的更详细说明请参见 [资源隔离概述](../1.resource-isolation-overview.md)。
 
 ## 操作步骤
 
@@ -109,9 +109,9 @@
    * `WEIGHT_IOPS`：用于指定 IOPS 的权重值，总和可以超过100，默认值为 `0`。
 
    创建成功，可以查询 `DBA_RSRC_PLAN_DIRECTIVES` 视图和 `DBA_OB_RSRC_IO_DIRECTIVES` 视图进行确认。
-   
+
    有关 `DBA_RSRC_PLAN_DIRECTIVES`视图的详细介绍请参见 [DBA_RSRC_PLAN_DIRECTIVES](../../../../12.reference-guide/5.system-view-oracle-mode/2.dictionary-view-1/116.DBA_RSRC_PLAN_DIRECTIVES.md)。
-   
+
    有关 `DBA_OB_RSRC_IO_DIRECTIVES` 视图的详细介绍，请参见 [DBA_OB_RSRC_IO_DIRECTIVES](新增视图暂时无法添加链接)。
 
 5. 调用 `DBMS_RESOURCE_MANAGER` 系统包中的 `SET_CONSUMER_GROUP_MAPPING` 子程序，根据实际使用场景，创建用户级资源隔离匹配规则。
@@ -192,7 +192,6 @@
    <p>如果不需要对资源进行限制，可以使用 <code>ALTER SYSTEM SET resource_manager_plan = '';</code> 语句禁用所有资源计划。</p>
    </main>
 
-
 ## 配置后的注意事项
 
 * 资源隔离匹配规则添加后，如果删除了用户后再重建，则资源隔离匹配规则仍然适用。
@@ -209,4 +208,4 @@
 
 ## 相关文档
 
-[SQL 级资源隔离](3.resource-isolation-at-sql-level-for-oracle-mode.md)
+[SQL 级资源隔离](3.resource-isolation-at-sql-level-of-oracle-mode.md)
