--- a/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/2.resource-isolation-at-user-level-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/1.1.resource-isolation/3.resource-isolation-of-mysql-mode/2.resource-isolation-at-user-level-of-mysql-mode.md
@@ -4,17 +4,17 @@
 
 ## 前提条件
 
-* 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [资源隔离概述](../1.overview.md)。
+* 开始配置用户级资源隔离前，建议您先了解资源组、资源管理计划、资源管理计划内容等基础概念，用户级资源隔离相关的基础概念及适用场景请参见 [资源隔离概述](../1.resource-isolation-overview.md)。
 
-* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作请参见 [配置 cgroups](1.config-cgroups-of-enterprise-for-mysql.md)。
+* 由于 CPU 的资源隔离依赖 cgroup，如果需要控制 CPU 的资源隔离，则在开始配置用户级资源隔离前，必须配置 cgroup 目录并开启 cgroup 功能。配置 cgroup 目录并开启 cgroup 功能的相关操作请参见 [配置 cgroups](1.config-cgroups-of-enterprise-of-mysql.md)。
 
   如果仅需要控制 IOPS 的资源隔离，则不需要配置 cgroups。
 
-* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/1.create-user-of-mysql-mode.md)。
+* 请确认已创建好需要进行资源隔离的用户。创建用户的详细操作请参见 [创建用户](../../../2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/1.create-user-of-mysql-mode.md)。
 
 ## 背景信息
 
-  用户级的资源隔离又分为用户级 user 资源隔离和用户级 function 资源隔离两种。有关两种资源隔离的更详细说明请参见 [资源隔离概述](../1.overview.md)。
+  用户级的资源隔离又分为用户级 user 资源隔离和用户级 function 资源隔离两种。有关两种资源隔离的更详细说明请参见 [资源隔离概述](../1.resource-isolation-overview.md)。
 
 ## 操作步骤
 
