--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -43,8 +43,8 @@ opt_set_sys_var:
 | RESOURCE_POOL_LIST       | 创建租户时的必填项，创建租户时仅支持分配一个资源池。如果需要为租户添加多个资源池，则可以待租户创建成功后通过修改租户资源池的方式再进行添加。 <blockquote>**注意**  </br>在分配资源池时，普通租户的内存的最小规格由隐藏配置项 `__min_full_resource_pool_memory`  控制，默认值为 5G，取值范围为 [1073741824,+∞)。如果您希望创建一个租户进行非常简单的功能测试，可以修改参数 `alter system __min_full_resource_pool_memory` 的值为 1073741824 来允许以最小 1 GB 内存的规格创建租户。</blockquote>        |
 | DEFAULT TABLEGROUP       | 用于指定租户默认的表组信息，`NULL` 表示取消默认表组。如果不指定，默认为 `NULL`。    |
 | COMMENT    | 指定对该租户的注释信息。           |
-| CHARACTER SET \| CHARSET | 指定租户的字符集。 </br>字符集相关的介绍信息请参见 [字符集](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/2.character-set-of-mysql-mode.md)。                |
-| COLLATE    | 指定租户的字符序。 </br>字符序相关的介绍信息请参见 [字符序](../../../4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/3.collation-of-mysql-mode.md)。                |
+| CHARACTER SET \| CHARSET | 指定租户的字符集。 </br>字符集相关的介绍信息请参见 [字符集](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/2.character-set-of-mysql-mode.md)。                |
+| COLLATE    | 指定租户的字符序。 </br>字符序相关的介绍信息请参见 [字符序](../../../4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/3.collation-of-mysql-mode.md)。                |
 | ZONE_LIST                | 指定租户的 Zone 列表。         |
 | PRIMARY_ZONE             | 指定租户的 Primary Zone。Primary Zone 表示 Leader 副本的偏好位置。指定 Primary Zone 实际上是指定了 Leader 更趋向于被调度到哪个 Zone 上。 Primary Zone 实际上是一个 Zone 的列表，列表中包含多个 Zone。当 Primary Zone 列表包含多个 Zone 时，使用分号（;）分隔的 Zone 具有从高到底的优先级；使用逗号（,）分隔的 Zone 具有相同优先级。例如，`primary_ zone =' zone1; zone2, zone3'` 表示该租户的表的分区 Leader 在 `zone1` 上， `zone1` 比 `zone2`、`zone3` 的优先级高，`zone2` 和 `zone3` 是同一优先级。 <blockquote>**注意**  </br>在指定 `PRIMARY_ZONE` 时，其值可以设置为 `RANDOM`（必须大写），表示随机选择最高优先级内的任意一个 Zone 作为 Primary Zone。</blockquote>  </br>更多 Primary Zone 相关的介绍信息请参见 [Primary Zone](../../../1.oceanbase-database-concepts/5.distributed-database-objects/2.cluster-architecture.md)。 |
 | LOCALITY                 | 指定副本在 Zone 间的分布情况。 </br>例如：`F@z1,F@z2,F@z3,F@z4` 表示 `z1`、`z2`、`z3` 、`z4` 为全功能副本。           |
