--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/1.trigger-overview-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/7.manage-triggers-of-oracle-mode/1.trigger-overview-of-oracle-mode.md
@@ -1,12 +1,13 @@
 # 概述
-#docslug#/oceanbase-database/oceanbase-database/V4.0.0/overview-24
+
 触发器是 OceanBase 数据库中为 Oracle 租户提供的功能，它类似过程和函数，是包含声明、执行和异常处理过程的 PL 块。触发器基于特定事件被执行，可以指定触发器是在事件之前还是之后触发，以及触发器是针对单个事件还是被事件执行影响的某行数据。
 
 触发器是一个独立的对象，当某个事件发生时自动地隐式运行，而且触发器不能接收参数。这里的事件指的是对数据库的表进行的 INSERT、UPDATE 及 DELETE 操作。
 
->**注意**
->
->OceanBase 数据库 V2.2.7x 及以下版本仅支持表上的行级触发器。
+<main id="notice" type='notice'>
+<h4>注意</h4>
+<p>OceanBase 数据库 V2.2.7x 及以下版本仅支持表上的行级触发器。</p>
+</main>
 
 一个简单的触发器的触发时机有四个点：
 
