--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md
@@ -177,9 +177,10 @@ CREATE TABLE table_name (column_name column_type[,column_name column_type])
 | column_name_list | 指定 Key 分区列名称列表。 |
 | partition_count  | 指定分区个数。         |
 
->**说明**
->
->对于 Hash/Key 分区，创建时如果没有指定分区的名字，分区的命名由系统根据命名规则完成。对于一级分区表，则每个分区分别命名为 p0、p1、...、pn。
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<p>对于 Hash/Key 分区，创建时如果没有指定分区的名字，分区的命名由系统根据命名规则完成。对于一级分区表，则每个分区分别命名为 p0、p1、...、pn。</p>
+</main>
 
 ### 示例
 
@@ -281,11 +282,13 @@ partition_count | subpartition_count:
     INT_VALUE
 ```
 
->**说明**
->
->* 模板化二级分区表的每个一级分区下的二级分区都按照模板中的二级分区定义，即每个一级分区下的二级分区定义均相同。
->
->* 对于模板化二级分区表来说，定义二级分区后，每个二级分区的命名规则为 `($part_name)s($subpart_name)`。例如：对于下⾯的 `tbl_rr` 表，一级分区 `p0` 下的 3 个二级分区的分区名分别为 `p0smp1`、`p0smp2`、`p0smp3`。
+<main id="notice" type='explain'>
+<h4>说明</h4>
+<ul>
+<li>模板化二级分区表的每个一级分区下的二级分区都按照模板中的二级分区定义，即每个一级分区下的二级分区定义均相同。</li>
+<li>对于模板化二级分区表来说，定义二级分区后，每个二级分区的命名规则为 <code>($part_name)s($subpart_name)</code>。例如：对于下⾯的 <code>tbl_rr</code> 表，一级分区 <code>p0</code> 下的 3 个二级分区的分区名分别为 <code>p0smp1</code>、<code>p0smp2</code>、<code>p0smp3</code>。</li>
+</ul>
+</main>
 
   ```sql
   obclient> CREATE TABLE tbl_rr(col1 INT,col2 INT,col3 INT)
