修改 1.replica-introduction.md

--- a/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
+++ b/zh-CN/6.manage/3.replica-management/1.replica-introduction.md
@@ -63,7 +63,7 @@ obclient> SELECT * FROM oceanbase.DBA_OB_LS limit 10;
 
 以上语句可以在系统租户和用户租户执行，以查看本租户对应的日志流的基本信息。例如上例在系统租户执行，所示为系统租户仅有的一个 1 号日志流。
 
-### 查看日志流的的位置信息和角色信息
+### 查看日志流的位置信息和角色信息
 
 日志流具有位置信息，记录了其分布于哪些节点，可以通过 `oceanbase.DBA_OB_LS_LOCATIONS` 视图的 `MEMBER_LIST` 字段查看。数据分区不再独立拥有位置信息，而是由其归属于的日志流位置决定。日志流支持在不同节点之间迁移和复制，以达到性能均衡和容灾的目的。
 
