修改 1.oceanbase-migration-assessment.md

--- a/zh-CN/7.reference/6.oceanbase-tools/1.oceanbase-migration-assessment.md
+++ b/zh-CN/7.reference/6.oceanbase-tools/1.oceanbase-migration-assessment.md
@@ -55,3 +55,7 @@ OMA 支持 SQL 回放或压测：
 * 支持从 OceanBase 数据库导出对应 Schema 的对象 DDL。
 
 * 支持从 OceanBase 数据库导出对应时间段的 SQL_AUDIT 中的 SQL 语句详情。
+
+## 了解更多
+
+有关 OceanBase 迁移评估的更多信息，参见 [OceanBase 迁移评估文档](https://www.oceanbase.com/docs/oma-doc-cn)
