修改 1.oceanbase-migration-assessment.md

--- a/zh-CN/7.reference/6.oceanbase-tools/1.oceanbase-migration-assessment.md
+++ b/zh-CN/7.reference/6.oceanbase-tools/1.oceanbase-migration-assessment.md
@@ -58,4 +58,4 @@ OMA 支持 SQL 回放或压测：
 
 ## 了解更多
 
-有关 OceanBase 迁移评估的更多信息，参见 [OceanBase 迁移评估文档](https://www.oceanbase.com/docs/oma-doc-cn)
+有关 OceanBase 迁移评估的更多信息，参见 [OceanBase 迁移评估文档](https://www.oceanbase.com/docs/oma-doc-cn)。
