修改 7.ocp-express.md

--- a/zh-CN/7.reference/6.oceanbase-tools/7.ocp-express.md
+++ b/zh-CN/7.reference/6.oceanbase-tools/7.ocp-express.md
@@ -1,4 +1,4 @@
-# OCP Express (OceanBase 云平台 Express)
+# OceanBase 云平台 Express (OCP Express)
 
 OCP Express 是一个基于 Web 的 OceanBase 4.x 管理工具，它集成在 OceanBase 数据库集群中，支持数据库集群关键性能指标查看及基本数据库管理功能。OCP Express 脱胎于 OceanBase 云平台（OceanBase Cloud Platform，OCP），在保留云平台核心能力的基础上，调整了整体的功能布局，给予用户全新的使用体验；同时也进一步调整了功能配置，使得 OCP Express 可以以极小的资源消耗部署在任意一台数据库节点上，使得 OCP Express 用户以最小的成本，获取全新的 OceanBase 4.x 管控体验。
 
@@ -61,7 +61,7 @@ MetaDB 用于存储 OCP Express 的元数据和监控数据，推荐在 OceanBas
 |≤ 50|4|16|200|
 |≤ 100|8|32|400|
 
-<main id="notice" type='notice'>
+<main id="notice" type='explain'>
 <h4>说明</h4>
 <p>以上推荐的资源消耗只是一个粗略的预估，实际的 MetaDB 资源消耗根据业务用量会有差异。</p>
 </main>
