V410 安全相关内容脱敏

--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/1.create-user-of-oracle-mode.md
@@ -70,7 +70,7 @@ tls_option:
 2. 执行以下命令，创建用户 `test2`。
 
    ```sql
-   obclient> CREATE USER test2 IDENTIFIED BY **1***;
+   obclient> CREATE USER test2 IDENTIFIED BY ******;
    ```
 
    `CREATE USER` 语句的更多信息，请参见 [CREATE USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/27.create-user-of-oracle-mode.md)。
