--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/7.lock-and-unlock-users-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/7.lock-and-unlock-users-of-oracle-mode.md
@@ -22,7 +22,7 @@ ALTER USER user {ACCOUNT LOCK | ACCOUNT UNLOCK};
   obclient> ALTER USER demo ACCOUNT LOCK ;
   Query OK, 0 rows affected
   
-  obclient -udemo@demo0_111 -P2881 -h10.10.10.1   -p***1**
+  obclient -udemo@demo0_111 -P2881 -h10.10.10.1   -p******
   obclient: [Warning] Using a password on the command line interface can be insecure.
   ERROR 3118 (HY000): User locked
   ```
