--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/2.create-role-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/9.manage-roles-of-oracle-mode/2.create-role-of-oracle-mode.md
@@ -32,10 +32,10 @@ CREATE ROLE role_name
   Query OK, 0 rows affected
   ```
 
-* 新建角色 `role2`，指定密码为 `**1***`。
+* 新建角色 `role2`，指定密码为 `******`。
 
   ```sql
-  obclient> CREATE ROLE role2 IDENTIFIED BY **1***;
+  obclient> CREATE ROLE role2 IDENTIFIED BY ******;
   Query OK, 0 rows affected
   ```
 
