--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/7.lock-and-unlock-users-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/7.lock-and-unlock-users-of-mysql-mode.md
@@ -22,7 +22,7 @@ ALTER USER user_name {ACCOUNT LOCK | ACCOUNT UNLOCK};
   obclient> ALTER USER demo ACCOUNT LOCK;
   Query OK, 0 rows affected
   
-  obclient -udemo@demo0_111 -P2881 -h10.10.10.1   -p***1**
+  obclient -udemo@demo0_111 -P2881 -h10.10.10.1   -p******
   obclient: [Warning] Using a password on the command line interface can be insecure.
   ERROR 3118 (HY000): User locked
   ```
@@ -33,7 +33,7 @@ ALTER USER user_name {ACCOUNT LOCK | ACCOUNT UNLOCK};
   obclient> ALTER USER demo ACCOUNT UNLOCK;
   Query OK, 0 rows affected (0.02 sec)
   
-  obclient> obclient -udemo@demo0_111 -P2881 -h10.10.10.1   -p***1**
+  obclient> obclient -udemo@demo0_111 -P2881 -h10.10.10.1   -p******
   Welcome to the OceanBase.  Commands end with ; or \g.
   Your OceanBase connection id is 3221583856
   Server version: OceanBase 4.0.0.0 (r100000172022101218-6ab80a3950710941946c004d805fcfded7a4aa2c) (Built Oct 12 2022 18:43:39)
