--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/1.create-a-dblink-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/2.manage-object-of-oracle-mode/9.manage-dblink-of-oracle-mode/1.create-a-dblink-of-oracle-mode.md
@@ -77,14 +77,14 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 * 创建连接到远端 OceanBase 数据库的 DBLink，且 IP 地址和端口号为指定 OBServer 服务器的 IP 地址和端口号。
 
   ```sql
-  obclient> CREATE DATABASE LINK ob_dblink CONNECT TO ob_user@oracle IDENTIFIED BY 1** OB HOST '10.xx.xx.xx:2881';
+  obclient> CREATE DATABASE LINK ob_dblink CONNECT TO ob_user@oracle IDENTIFIED BY ****** OB HOST 'xx.xx.xx.xx:2881';
   Query OK, 1 row affected
   ```
 
 * 创建连接到远端 OceanBase 的 DBLink，且 IP 地址和端口号为集群的 Proxy 的 IP 地址和端口号，同时 Proxy 由 ConfigUrl 方式部署。
 
   ```sql
-  obclient> CREATE DATABASE LINK ob_dblink_proxy CONNECT TO ob_user@oracle IDENTIFIED BY 1** OB HOST '10.xx.xx.xx:2883' CLUSTER "ob410";
+  obclient> CREATE DATABASE LINK ob_dblink_proxy CONNECT TO ob_user@oracle IDENTIFIED BY ****** OB HOST 'xx.xx.xx.xx:2883' CLUSTER "ob410";
   Query OK, 1 row affected
   ```
 
@@ -97,7 +97,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@tenant IDENTIFIED BY 
 
   ```sql
 
-  obclient> CREATE DATABASE LINK ob_dblink_reverse_link CONNECT TO ob_user2@oracle IDENTIFIED BY 123 OB HOST  '100.xx.xx.xx:2881' MY_NAME local_ob_user@oracle IDENTIFIED BY 456 HOST '100.xx.xx.xx:2881';
+  obclient> CREATE DATABASE LINK ob_dblink_reverse_link CONNECT TO ob_user2@oracle IDENTIFIED BY ****** OB HOST  'xx.xx.xx.xx:2881' MY_NAME local_ob_user@oracle IDENTIFIED BY ****** HOST 'xx.xx.xx.xx:2881';
   Query OK, 1 row affected
   ```
 
@@ -134,7 +134,7 @@ obclient> CREATE DATABASE LINK dblink_name CONNECT TO user@oracle IDENTIFIED BY 
 创建连接到远端 Oracle 数据库的 DBLink 的示例如下：
 
 ```sql
-obclient> CREATE DATABASE LINK orcl_dblink CONNECT TO orcl_user@oracle IDENTIFIED BY 1** OCI HOST '10.xx.xx.xx:1521/ORCL';
+obclient> CREATE DATABASE LINK orcl_dblink CONNECT TO orcl_user@oracle IDENTIFIED BY ****** OCI HOST 'xx.xx.xx.xx:1521/ORCL';
 Query OK, 1 row affected
 ```
 
