--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
@@ -122,7 +122,7 @@ OceanBase 数据库默认会自动创建 sys 租户，sys 租户负责一部分 
 首次使用新租户连接 OceanBase 数据库时，您必须使用 `root` 用户。成功连接后，您可执行如下命令创建新用户连接 OceanBase 数据库。
 
 ```sql
-obclient> CREATE USER IF NOT EXISTS test IDENTIFIED BY '**1***';
+obclient> CREATE USER IF NOT EXISTS test IDENTIFIED BY '******';
 ```
 
 详细信息请参考 [创建用户](5.manage-users-and-permissions/3.mysql-mode/1.create-user-of-mysql-mode.md)。
