--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/14.merge-troubleshooting.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/14.merge-troubleshooting.md
@@ -126,18 +126,17 @@ obclient> SELECT * FROM __all_virtual_meta_table WHERE data_version != 25 LIMIT 
 
 1. 定位未合并到指定版本的 partition。
 
-   *
-     进数据库查询
+   * 进数据库查询
      例如当前要合并的目标版本是 25，可以去 meta 表看 `data_version != 25` 的副本，从而缩小排查范围。
-     **说明**
 
-     这里 meta 表指一组表，一般先看最后一级 meta 表 `__all_meta_table`/`__all_virtual_meta_table`）有没有 data_version 没推上去的副本，没有的话，查看更上一级的 meta 表。
+      <main id="notice" type='explain'>
+      <h4>说明</h4>
+      <p>这里 meta 表指一组表，一般先看最后一级 meta 表 <code>__all_meta_table</code>/<code>__all_virtual_meta_table</code>）有没有 data_version 没推上去的副本，没有的话，查看更上一级的 meta 表。
+      对于 V3.1.x 版本，meta 表指 <code> __all_virtual_core_meta_table</code>、<code>__all_virtual_core_root_table</code>、<code>__all_root_table</code>、<code>__all_virtual_meta_table</code>。</p>
+      </main>
 
-     对于 V3.1.x 版本，meta 表指`__all_virtual_core_meta_table`、`__all_virtual_core_root_table`、`__all_root_table`、`__all_virtual_meta_table`。
-
-   *
-     在数据库后台查询
-     以 `not merged` 为关键词搜索 RS 所在机器上的最新的 `rootservice.log`。
+   * 在数据库后台查询
+        以 `not merged` 为关键词搜索 RS 所在机器上的最新的 `rootservice.log`。
 
 2.
    判断该 partition 的合并任务是否在执行中。
