--- a/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/14.merge-troubleshooting.md
+++ b/zh-CN/1.users-guide/11.operation-and-maintenance-management/4.troubleshoot/14.merge-troubleshooting.md
@@ -138,8 +138,7 @@ obclient> SELECT * FROM __all_virtual_meta_table WHERE data_version != 25 LIMIT 
    * 在数据库后台查询
         以 `not merged` 为关键词搜索 RS 所在机器上的最新的 `rootservice.log`。
 
-2.
-   判断该 partition 的合并任务是否在执行中。
+2. 判断该 partition 的合并任务是否在执行中。
 
    ```unknow
    SELECT * FROM __all_virtual_sys_task_status;
@@ -147,8 +146,7 @@ obclient> SELECT * FROM __all_virtual_meta_table WHERE data_version != 25 LIMIT 
 
    可以通过该虚拟表拿到执行的 trace，然后去对应机器上查询，判断合并任务是否卡住。
 
-3.
-   如果该 partition 没有调度合并任务，判断该 partition 的最新的转储 sstable 的 snapshot_version 有没有推过 `freeze_info` 点，如果没有推过 `freeze_info` 点，说明转储有问题。
+3. 如果该 partition 没有调度合并任务，判断该 partition 的最新的转储 sstable 的 snapshot_version 有没有推过 `freeze_info` 点，如果没有推过 `freeze_info` 点，说明转储有问题。
 
    ```unknow
    SELECT * FROM __all_virtual_table_mgr WHERE table_id = xxx and partition_id = xxx;
