--- a/zh-CN/7.reference/1.oceanbase-database-concepts/11.database-security/2.identity-authentication.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/11.database-security/2.identity-authentication.md
@@ -9,9 +9,9 @@
 MySQL 中，一个 user 由 user_name 和 host 共同体组成。使用下列语句创建 3 个具有相同用户名的用户的示例如下：
 
 ```sql
-create user 'u1'@'%' identified by '123';
-create user 'u1'@'1.1.1.1' identified by '111';
-create user 'u1'@'2.2.2.2' identified by '222';
+create user 'u1'@'%' identified by '***';
+create user 'u1'@'1.1.1.1' identified by '***';
+create user 'u1'@'2.2.2.2' identified by '***';
 ```
 
 用户登录时，OBServer 节点 会根据 user_name、client_ip、password 匹配，来控制用户登录。
