--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
@@ -142,7 +142,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
    当连续输入 5 次错误密码时，用户会被锁定一天。
 
    ```sql
-   $ obclient -h127.1 -P2881 -usecuser@sectenant -p**123**;
+   $ obclient -h127.1 -P2881 -usecuser@sectenant -p*******;
    obclient: [Warning] Using a password on the command line interface can be insecure.
    ERROR 5039 (01007): User locked
    ```
