--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/6.change-user-password-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/6.change-user-password-of-oracle-mode.md
@@ -14,10 +14,10 @@ SQL 语法如下：
 ALTER USER username IDENTIFIED BY password;
 ```
 
-将用户 `sqluser01` 的密码修改为 `***1**` 的示例如下。
+将用户 `sqluser01` 的密码修改为 `******` 的示例如下。
 
 ```sql
-obclient> ALTER USER sqluser01 IDENTIFIED BY ***1**;
+obclient> ALTER USER sqluser01 IDENTIFIED BY ******;
 ```
 
 更多 `ALTER USER` 语句的信息请参见 [ALTER USER](../../../../../4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/12.alter-user-of-oracle-mode.md)。
@@ -40,10 +40,10 @@ SET PASSWORD [FOR user] = PASSWORD(password);
 
   查看当前拥有权限的操作请参见 [查看用户权限](../2.oracle-mode/4.view-user-permissions-of-oracle-mode.md)。如果您没有所需的权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../2.oracle-mode/5.modify-user-permissions-of-oracle-mode.md)。
   
-将用户 `sqluser01` 的密码修改为 `***1**`的示例如下：
+将用户 `sqluser01` 的密码修改为 `******` 的示例如下：
 
 ```sql
-obclient> SET PASSWORD for sqluser01 = PASSWORD(***1**);
+obclient> SET PASSWORD for sqluser01 = PASSWORD(******);
 Query OK, 0 rows affected
 ```
 
