update 更新 OBProxy 相关

--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/3.delete-obproxy-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/3.delete-obproxy-cluster.md
@@ -1,23 +1,69 @@
 # 删除 OBProxy 集群
 
-根据业务需要，可以删除不再使用的 OBProxy 集群，会将集群中所有 OBProxy 服务从各主机上卸载，并释放主机上 OBProxy 服务占用的资源。
+您可以根据业务需要，使用 OCP 或 OBD 将不再使用的 OBProxy 集群删除。删除 OBProxy 集群会将集群中所有 OBProxy 服务从各主机上卸载，并释放主机上 OBProxy 服务占用的资源。
 
 ## 前提条件
 
 * 当前登录 OCP 的用户为 OBPROXY_MANAGER 角色。
 
-* 确保当前 OBProxy 集群已不再对业务提供代理的服务。
+* 请确保该 OBProxy 的删除不影响业务。
 
-## 操作步骤
+  * 该 OBProxy 所在集群无可连接的 OB 集群，或该 OB 集群也弃用了。
+
+  * 当前 OBProxy 的集群中除了这个待删除的 OBProxy 之外，其他 OBProxy 均可正常使用。并且您已通过配置负载均衡管理，将业务请求转发到其他可用 OBProxy 上。
+
+* 使用 OBD 删除 OBProxy 集群时需确认待删除的 OBProxy 集群为 OBD 当前操作用户所创建。
+
+## 使用 OCP 删除 OBProxy 集群
 
 1. 登录 OCP。
 
-2. 在左侧导航栏单击 **OBProxy**。
+2. 在左侧导航栏单击 **OBProxy** 。
 
-3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBProxy 集群 **总览** 页面。
+3. 在集群列表中选择需要操作的 OBProxy 集群，进入 OBPRoxy 集群 **总览** 页面。
 
-4. 单击 **删除集群**。
+4. 单击 **删除集群** 。
 
-   ![09162145](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0863922361/p327470.png)
+   ![09162145](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p327470.png?Expires=7258125489&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=3989rTORjbBHoic1jSb5NrChHkU%3D)
 
-5. 在弹出框中单击 **删除**，完成删除 OBProxy 集群的操作。
+5. 在弹出框中单击 **删除** ，完成删除 OBProxy 集群的操作。
+
+   您可通过弹出框中的 **查看任务** 按钮，查看进度。
+
+   当该任务状态为 **完成**，且 **OBProxy** 页的 **集群列表** 中已无该 OBProxy 集群时，则删除成功。
+
+## 使用 OBD 删除 OBProxy 集群
+
+<main id="notice" type='explain'>
+  <h4>适用性说明</h4>
+  <p>目前仅社区版 OceanBase 数据库可以通过 OBD 删除 OBProxy 集群。</p>
+</main>
+
+1. 在 OBD 所在机器的操作用户下，执行如下命令销毁待删除的 OBProxy 集群：
+
+   ```bash
+   obd cluster destroy <deploy_name>
+   ```
+
+   其中，`deploy_name` 为待删除的 OBProxy 集群名。
+
+2. 执行如下命令查看 OBD 下集群的状态：
+
+   ```bash
+   obd cluster list
+   ```
+
+   显示上一步中销毁的集群状态为 `destroyed` 说明已成功销毁该集群。
+
+3. 也可登录到 OBProxy 集群对应的机器上，执行如下命令查看相关 obproxy 进程是否存在：
+
+   ```bash
+   ps -ef | grep obproxy
+   ```
+
+   若查询结果显示无相关 obproxy 进程，也表示成功删除该集群。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>上述步骤中使用的到 OBD 命令，详细信息可参考 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001031933">集群命令组</a>。</p>
+</main>
