--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/6.manage-ob-cluster-in-obproxy.md
@@ -1,8 +1,10 @@
 # 管理 OBProxy 连接的 OB 集群
 
-本文介绍如何通过 OCP 为 OBProxy 添加可连接的 OB 集群或删除已连接的 OB 集群。
+您可以通过 OCP 为 OBProxy 添加可连接的 OceanBase 集群或删除已连接的 OceanBase 集群。
 
-## 添加可连接的 OB 集群
+## 添加可连接的 OceanBase 集群
+
+操作步骤如下：
 
 1. 登录 OCP。
 
@@ -12,25 +14,29 @@
 
 4. 单击 **添加可连接的 OB 集群**。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3640360261/p271529.png)
+   ![1](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p271529.png?Expires=7258125490&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=V20xY77Ub%2BE1ZVd2UbX%2Bw4URilY%3D)
 
-5. 在右侧弹出框中选择可连接的 OB 集群。
+5. 在右侧弹出框中选择可连接的 OceanBase 集群。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6589360261/p271754.png)
+   ![1](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p271754.png?Expires=7258125490&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=kCSaZQAZl9i4sS1HILuFLEhEkww%3D)
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>当 OCP 密码箱中不存在该集群 proxyro 用户的连接凭证时，请单击 <strong>新建连接</strong>，为该集群的 proxyro 用户创建连接凭证。具体操作请参见对应版本的 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775977">新建连接</a>。</p>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <p>当 OCP 密码箱中不存在该集群 proxyro 用户的连接凭证时，请单击 <strong>新建连接</strong>，为该集群的 proxyro 用户创建连接凭证。具体操作请参见对应版本的 <a href="https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775977">新建连接</a>。</p>
+   </main>
 
 6. 单击 **确定**，完成添加。
 
-## 删除已连接的 OB 集群
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>删除 OBProxy 集群下已连接的 OB 集群会使当前 OBProxy 集群下的 OBProxy 无法访问该 OceanBase 集群，删除前请确认 OceanBase 集群已不再使用。</p>
+   </main>
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>删除 OBProxy 集群下已连接的 OB 集群会使当前 OBProxy 集群下的 OBProxy 无法访问该 OB 集群，删除前请确认 OB 集群已不再使用。</p>
-  </main>
+## 删除已连接的 OceanBase 集群
+
+删除 OBProxy 集群下已连接的 OceanBase 集群会使当前 OBProxy 集群下的 OBProxy 无法访问该 OceanBase 集群，删除前请确认。
+
+操作步骤如下：
 
 1. 登录 OCP。
 
@@ -40,6 +46,6 @@
 
 4. 在 **可连接 OB 集群** 区域，单击对应集群后的 **删除**。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6620460261/p271769.png)
+   ![1](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p271769.png?Expires=7258125490&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=qaIqYZvVLE8lBZPrRAJ7q6HC6U8%3D)
 
 5. 在弹出框中单击 **确定**。
