--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/4.upgrade-all-obproxy-in-obproxy-cluster.md
@@ -1,8 +1,8 @@
 # 升级 OBProxy 集群下全部 OBProxy
 
-当 OBProxy 有了新的版本时，可以在 OCP 上升级 OBProxy 集群下的全部 OBProxy。
+当 OBProxy 有了新的版本时，可以在 OCP 或 OBD 上升级 OBProxy 集群下的全部 OBProxy。
 
-## 操作步骤
+## 使用 OCP 升级 OBProxy 集群下全部 OBProxy
 
 1. 登录 OCP。
 
@@ -12,26 +12,46 @@
 
 4. 单击 **全部升级**。
 
-   ![09162144](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p327469.png)
+   ![09162144](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p327469.png?Expires=7258125489&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=%2FLaUwWqZSP9mNx3MLQNVonc5Q%2Bs%3D)
 
 5. 在弹出框中选择升级版本。
 
-   ![08161435](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4963922361/p304959.png)
+   ![08161435](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p304959.png?Expires=7258125489&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=dKRjDeRwpo443bpg9efBEHpJhiQ%3D)
 
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <ul>
-    <li>
-    <p>仅可选择高于当前最高版本的软件包。</p>
-    </li>
-    <li>
-    <p>仅可选择匹配当前主机硬件架构的软件包。</p>
-    </li>
-    </ul>
-  </main>
+   <main id="notice" type='explain'>
+     <h4>说明</h4>
+     <ul>
+     <li>
+     <p>仅可选择高于当前最高版本的软件包。</p>
+     </li>
+     <li>
+     <p>仅可选择匹配当前主机硬件架构的软件包。</p>
+     </li>
+     </ul>
+   </main>
 
 6. 单击 **确定**。
 
    弹出如下对话框，可单击 **查看任务** 查看详细进展。 **任务状态** 显示为 **完成**，即表示升级成功。
 
    ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5746081461/p352533.png)
+
+## 使用 OBD 升级 OBProxy 集群下全部 OBProxy
+
+<main id="notice" type='explain'>
+  <h4>适用性说明</h4>
+  <p>目前仅社区版 OceanBase 数据库可以通过 OBD 升级 OBProxy 集群下全部 OBProxy。</p>
+</main>
+
+由于开源 OBProxy 组件在 V3.2.3 之后正式更名为 obproxy-ce，因此使用 `obd cluster upgrade` 命令升级会报 No such package obproxy-3.2.3 错误。
+
+若想要从 OBProxy V3.2.3 之前的版本升级到 V3.2.3，具体操作可参考 [如何升级 obproxy 到 obproxy-ce 3.2.3](https://www.oceanbase.com/docs/community-obd-cn-10000000001031931)。
+
+除此之外的其他升级情况，可直接执行 [obd cluster upgrade](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933#519ea8af-b2e4-4af0-9263-2facab12a8bc) 命令进行升级操作。
+
+执行命令成功后，可在 OBProxy 集群中的对应机器 `home_path/bin` 下执行 `./obproxy -V` 命令查看 OBProxy 的版本，确认是否升级成功。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p><code>home_path</code> 为配置文件中指定的目录，可自定义。</p>
+</main>
