--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/2.obproxy-management/2.manage-obproxy-clusters/5.restart-all-obproxy-nodes-in-obproxy-cluster.md
@@ -1,16 +1,20 @@
 # 重启 OBProxy 集群下全部 OBProxy
 
-本文介绍如何在 OCP 上重启 OBProxy 集群下的全部 OBProxy。
+您可以通过 OCP 或 OBD 重启 OBProxy 集群下的全部 OBProxy。
 
 ## 前提条件
 
-当前登录 OCP 的用户是 OBPROXY_MANAGER 角色。
+* 当前登录 OCP 的用户是 OBPROXY_MANAGER 角色。
+
+* 重启过程会停所有 OBProxy，建议在业务量少的是时间段执行。
+
+* 使用 OBD 重启 OBProxy 时需确定该 OBProxy 集群是由当前 OBD 操作用户所创建。
 
 ## 注意事项
 
 重启 OBProxy 会出现连接中断，请谨慎操作。
 
-## 操作步骤
+## 使用 OCP 重启 OBProxy 集群下全部 OBProxy
 
 1. 登录 OCP。
 
@@ -20,15 +24,49 @@
 
 4. 单击 **全部重启**。
 
-   ![09162146](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3073922361/p327471.png)
+   ![09162146](http://icms-x-dita.oss-cn-zhangjiakou.aliyuncs.com/xdita-output/zh-CN/task15904357/images/p327471.png?Expires=7258125489&OSSAccessKeyId=LTAIJfoPL6wmrirR&Signature=57c62mlAt00tJnnGWyJ1KnLgID0%3D)
 
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>重启 OBProxy 会出现连接中断，请谨慎操作。</p>
-  </main>
+   <main id="notice" type='notice'>
+     <h4>注意</h4>
+     <p>重启 OBProxy 会出现连接中断，请谨慎操作。</p>
+   </main>
 
-5. 在弹出框中单击 **重启**。
+5. 在弹出框中单击 **重启** 。
 
-   可单击弹出框中的 **查看任务** 查看详细进展。**任务状态** 显示为 **完成**，即表示重启成功。
+   您可通过弹出框中的 **查看任务** 按钮，查看重启进度。
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5716081461/p352534.png)
+   当该任务状态为 **完成**，且集群 **总览** 页的 **OBProxy 列表** 中，所有 OBProxy 的状态为 **运行中** 时，则重启成功。
+
+## 使用 OBD 重启 OBProxy 集群下全部 OBProxy
+
+<main id="notice" type='explain'>
+  <h4>适用性说明</h4>
+  <p>目前仅社区版 OceanBase 数据库可以通过 OBD 重启 OBProxy 集群下全部 OBProxy。</p>
+</main>
+
+1. 登录到待重启的 OBProxy 所在机器，执行如下命令查看 obproxy 进程启动时间:
+
+   ```bash
+   ps -ef | grep obproxy
+   ```
+
+2. 回到 OBD 所在机器的操作用户下，执行如下命令重启 OBProxy:
+
+   ```bash
+   obd cluster restart <deploy_name>
+   ```
+
+   其中，`deploy_name` 为所需重启的 OBProxy 集群名。
+
+3. 登录到重启后的 OBProxy 所在机器，执行如下命令重新查看 obproxy 进程的启动时间：
+
+   ```bash
+   ps -ef | grep obproxy
+   ```
+
+   若启动时间更新为刚刚重启的时间，则表示重启成功。
+
+<main id="notice" type='explain'>
+  <h4>说明</h4>
+  <p>上述步骤中使用的到 OBD 命令，详细信息可参考 <a href="https://www.oceanbase.com/docs/community-obd-cn-10000000001031933">集群命令组</a>。</p>
+</main>
