--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md
@@ -60,6 +60,6 @@ OceanBase 数据库的 MySQL 模式主要通过设置一系列系统变量来规
    ERROR 1819 (HY000): Your password does not satisfy the current policy
    requirements
    
-   obclient> CREATE USER sectest1 IDENTIFIED BY '***1_%';
+   obclient> CREATE USER sectest1 IDENTIFIED BY '******';
    Query OK, 0 rows affected
    ```
