--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/6.change-user-password-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/6.change-user-password-of-mysql-mode.md
@@ -14,7 +14,7 @@ SQL 语句如下：
 obclient>ALTER USER username IDENTIFIED BY password;
 ```
 
-将用户 `sqluser01` 的密码修改为 \*\*\*`1**` 的示例如下：
+将用户 `sqluser01` 的密码修改为 \*\*\*`***` 的示例如下：
 
 ```sql
 obclient> ALTER USER sqluser01 IDENTIFIED BY ******;
@@ -40,7 +40,7 @@ obclient> SET PASSWORD [FOR user] = PASSWORD('password');
 
   查看当前拥有权限的操作请参见 [查看用户权限](../3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果您没有全局的 `CREATE USER` 权限，请联系管理员为您添加，为用户添加权限的相关操作请参见 [修改用户权限](../3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
   
-将用户 `sqluser01` 的密码修改为 \*\*\*`1**` 的示例如下：
+将用户 `sqluser01` 的密码修改为 \*\*\*`***` 的示例如下：
 
 ```sql
 obclient> SET PASSWORD FOR sqluser01 = password('******');
