--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/3.open-the-log-archive-mode.md
@@ -1,33 +1,33 @@
-# 打开归档模式
+# 开启归档模式
 
-归档模式用于控制某个租户的日志归档功能，只有在归档模式下，才可以进行日志归档任务。若租户在打开归档模式之前，已经配置了归档目的端，并且该目的端处于 `ENABLE` 状态，打开归档模式后，系统将会自动发起日志归档任务。
+归档模式用于控制某个租户的日志归档功能，只有在归档模式下，才可以进行日志归档任务。若租户在开启归档模式之前，已经配置了归档目的端，并且该目的端处于 `ENABLE` 状态，开启归档模式后，系统将会自动发起日志归档任务。
 
 ## 背景信息
 
-假设当前集群中有 3 个租户，分别是 `sys`、`mysql_tenant` 和 `oracle_tenant`，且租户 `mysql_tenant` 和 `oracle_tenant` 均未打开归档模式，您可以通过以下 3 种方式为租户打开归档模式。
+假设当前集群中有 3 个租户，分别是 `sys`、`mysql_tenant` 和 `oracle_tenant`，且租户 `mysql_tenant` 和 `oracle_tenant` 均未开启归档模式，您可以通过以下 3 种方式为租户开启归档模式。
 
-## 系统租户为其他租户打开归档模式
+## 系统租户为其他租户开启归档模式
 
-`sys` 租户可以为集群中的所有租户或指定租户打开归档模式。
+`sys` 租户可以为集群中的所有租户或指定租户开启归档模式。
 
 1. 使用 `root` 用户登录集群的 `sys` 租户。
 
-2. 执行以下语句，打开归档模式。
+2. 执行以下语句，开启归档模式。
 
-   * 打开集群中所有租户的归档模式
+   * 开启集群中所有租户的归档模式
 
-     该方式会将当前集群中的所有租户打开归档模式。
+     该方式会将当前集群中的所有租户开启归档模式。
 
      <main id="notice" type='explain'>
      <h4>注意</h4>
-     <p>该操作仅对当前集群中的所有租户生效，对于该操作之后所创建的租户，系统不会自动打开归档模式。</p>
+     <p>该操作仅对当前集群中的所有租户生效，对于该操作之后所创建的租户，系统不会自动开启归档模式。</p>
      </main>
 
      ```shell
      obclient [(none)]> ALTER SYSTEM ARCHIVELOG [TENANT = ALL];
      ```
 
-     命令执行成功后，在本示例中， `mysql_tenant` 和 `oracle_tenant` 都会打开归档模式。可以在 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图中查看集群中所有租户的归档模式。
+     命令执行成功后，在本示例中， `mysql_tenant` 和 `oracle_tenant` 都会开启归档模式。可以在 `sys` 租户下的 `oceanbase.DBA_OB_TENANTS` 视图中查看集群中所有租户的归档模式。
 
      示例如下：
 
@@ -42,11 +42,11 @@
      2 rows in set
      ```
 
-   * 打开指定租户的归档模式
+   * 开启指定租户的归档模式
 
-     该方式仅会打开指定租户的归档模式，不会影响集群中的其他租户。
+     该方式仅会开启指定租户的归档模式，不会影响集群中的其他租户。
 
-     打开 `mysql_tenant` 租户的日志归档的示例如下：
+     开启 `mysql_tenant` 租户的日志归档的示例如下：
 
      ```shell
      obclient [(none)]> ALTER SYSTEM ARCHIVELOG TENANT = mysql_tenant;
@@ -70,15 +70,15 @@
      2 rows in set
      ```
 
-## 用户租户为本租户打开归档模式
+## 用户租户为本租户开启归档模式
 
-用户租户也可以直接为本租户打开归档模式，不会影响其他租户。
+用户租户也可以直接为本租户开启归档模式，不会影响其他租户。
 
 1. 租户管理员登录到数据库。
 
     本示例中，您可以使用 `root` 用户登录 `mysql_tenant` 租户；或者也可以使用 `sys` 用户登录 `oracle_tenant` 租户。
 
-2. 执行以下语句，打开本租户的归档模式。
+2. 执行以下语句，开启本租户的归档模式。
 
    ```shell
    obclient [xxx]> ALTER SYSTEM ARCHIVELOG;
