--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/4.close-the-log-archive-mode.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/4.close-the-log-archive-mode.md
@@ -1,10 +1,10 @@
 # 关闭归档模式
 
-打开归档模式后，也可以用相同的方式关闭归档模式。若租户在关闭归档模式之前，有正在进行或者暂停的日志归档任务，关闭归档模式后，系统会自动停止这些归档任务。
+开启归档模式后，也可以用相同的方式关闭归档模式。若租户在关闭归档模式之前，有正在进行或者暂停的日志归档任务，关闭归档模式后，系统会自动停止这些归档任务。
 
 ## 背景信息
 
-假设当前集群中有 3 个租户，分别是 `sys`、`mysql_tenant` 和 `oracle_tenant`，且租户 `mysql_tenant` 和 `oracle_tenant` 均已打开归档模式。
+假设当前集群中有 3 个租户，分别是 `sys`、`mysql_tenant` 和 `oracle_tenant`，且租户 `mysql_tenant` 和 `oracle_tenant` 均已开启归档模式。
 
 ## 系统租户为其他租户关闭归档模式
 
