--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/2.oracle-mode/3.logon-failure-handling-policy-of-oracle-mode.md
@@ -132,7 +132,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 4. 创建 User，并指定 Profile。
 
    ```sql
-   obclient> CREATE USER secuser IDENTIFIED BY ***1** PROFILE "userprof1";
+   obclient> CREATE USER secuser IDENTIFIED BY ****** PROFILE "userprof1";
    
    obclient> GRANT all privileges ON *.* to secuser;
    ```
