--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md
@@ -34,7 +34,7 @@
      *************************** 1. row ***************************
                        host: %
                        user: test
-                   password: *6691484ea6b50ddde1926a220da01fa9e575c18a
+                   password: ****************************************
                 select_priv: Y
                 insert_priv: Y
                 update_priv: N
