--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
@@ -55,7 +55,7 @@ opt_for_grant_user:
 
 |                                       参数                           |                        描述         |
 |--------------------------------------------------|-------------------------------------------------------------------|
-| \[FULL\] TABLES \[{FROM \| IN} database_name                                    | 展示 `database_name` 库中所有的表。 `FULL` 关键字用于展示表类型。   |
+| \[FULL\] TABLES \{FROM \| IN} database_name                                    | 展示 `database_name` 库中所有的表。 `FULL` 关键字用于展示表类型。   |
 | {DATABASES \| SCHEMAS} \[STATUS\]                                               | 展示当前租户内的所有数据库。 `STATUS` 关键字用于展示数据库的读写属性。   |
 | \[FULL\] {COLUMNS \| FIELDS} {FROM \| IN} rel_name                              | 展示关系 `rel_name` 的列。 `FULL` 关键字用于展示列的字符序、权限与注释。  |
 | TABLE STATUS \[{FROM \| IN} database_name\]                                     | 展示 `database_name` 库中所有表的详细信息。  |
