--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/12.json-functions-oracle-mode/3.query-json-text-f-oracle/4.json-table-oracle-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/5.functions-of-oracle-mode/2.single-row-functions-of-oracle-mode/12.json-functions-oracle-mode/3.query-json-text-f-oracle/4.json-table-oracle-mode.md
@@ -2,7 +2,8 @@
 
 ## 描述
 
-`JSON_TABLE()` 函数提供了一种联系关系表和 JSON 结构数据的途径。可以在 SQL 中像使用虚拟关系表一样来使用 `JSON_TABLE()` 的输出结果。`JSON_TABLE()` 为每一个 JSON 值提供了列输出，对于 JSON 内的数组，提供了多行（列）输出。`JSON_TABLE()` 必须用在 `SELECT` 语句的 `FROM` 子句中。
+`JSON_TABLE()` 函数提供了一种联系关系表和 JSON 结构数据的途径。可以在 SQL 中像使用虚拟关系表一样来使用 `JSON_TABLE()` 的输出结果。`JSON_TABLE()` 为每一个 JSON 值提供了列输出，对于 JSON 内的数组，提供了多行（列）输出。
+`JSON_TABLE()` 必须用在 `SELECT` 语句的 `FROM` 子句中。
 
 ## 语法
 
